# ClaudeOculomotorJax

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  LICENSE  OVAR_DIAGNOSIS_NOTES.md  PLAN_orbital_limits.md  make_stable.ps1  pyproject.toml  start_dev_server.ps1  start_stable_server.ps1  vor_model_spec.md
.claude/: settings.local.json
docs/: index.html  parameters.html  parameters_schema.yaml  states.html  states_schema.yaml
manuscript/: binocular_integrator_manuscript.md  intermittent_strabismus_three_policy.docx  manuscript.md  push_pull_bayesian_readout.md  realizability_gated_saccade_selection.docx  saccade_triggers_as_kalman_gains.md  steady_state_vergence.md  unified_oculomotor_template.md
notebooks/: accommodation_vergence.ipynb  cerebellar_disorders.ipynb  cn_lesions.ipynb  integrator_disorders.ipynb  noise_effects.ipynb  saccades.ipynb  vergence.ipynb  vestibular_lesions.ipynb  vor_vvor_okn.ipynb
oculomotor/: __init__.py  brain_model.py  params.py  plant_model.py  runner.py  scenario.py  sensory_model.py  stimuli.py
outputs/: admin.html  block_diagram  simulation_log.csv
papers/: benchmark_references.md
scripts/: _bench_dt.py  _diag_noise.py  _diag_noise2.py  _diag_noise3.py  _diag_sg.py  _diag_sg2.py  _diag_sg3.py  _diag_vor_qp.py  bench_accommodation.py  bench_clinical.py  bench_clinical_cerebellum.py  bench_clinical_cn_palsies.py  bench_clinical_ni_vs.py  bench_clinical_saccades.py  bench_clinical_utils.py  bench_clinical_vergence.py  bench_clinical_vestibular.py  bench_compare_unified.py  bench_efference.py  bench_experiments.py  bench_fixation.py  (+45 more)
(+94 files in other folders)
