[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oculomotor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "diffrax",
    "optax",
    "matplotlib",
    "numpy",
    "pydantic",
    "anthropic",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]
